# experta

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  Pipfile  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/examples/: EXISTS.ipynb  KillEngine.py  Pipfile  factorial.ipynb  fibonacci.ipynb  lambda_test.py  mab.ipynb  manners.ipynb  maximum.ipynb  rockpaperscissors.ipynb  scratch.py  scratch_2.py  test.py  unification.py  wordgame.ipynb  zebra.ipynb
docs/source/: api.rst  conf.py  installation.rst  introduction.rst  reference.rst  thebasics.rst
experta/: __init__.py  activation.py  agenda.py  conditionalelement.py  engine.py  fact.py  factlist.py  rule.py  strategies.py  unification.py
experta/matchers/rete/: __init__.py  check.py  nodes.py
tests/regressions/: issue_experta_3.py
tests/unit/: test_abstract.py  test_activation.py  test_agenda.py  test_conditionalelement.py  test_deffacts.py  test_engine.py  test_fact.py  test_factlist.py  test_field.py  test_fieldconstraint.py  test_operator.py  test_rule.py  test_strategies.py  test_strategy_statemachine.py  test_watchers.py
tests/unit/matchers/rete/: test_bus_node.py  test_checks.py  test_conflict_set_change_node.py  test_constructions.py  test_dnf.py  test_feature_tester_node.py  test_matcher.py  test_not_node.py  test_ordinary_match_node.py  test_rete_abstract.py  test_token.py  test_utils.py
tests/unit/utils/: test_freeze.py
