[metadata]
name = experta
version = attr: experta.__version__
description = Expert Systems for Python
long_description = file: README.rst, TODO.rst, CHANGELOG.rst
keywords = knowledge-based, inference, engine
license = LGPLv3
classifiers = 
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: PyPy
authors = Roberto Abdelkader Martínez Pérez
authors_email = robertomartinezp@gmail.com
url = https://github.com/nilp0inter/experta

[options]
zip_safe = False
include_package_data = True
install_requires =
  frozendict==1.2
  schema==0.6.7
packages = find:

[options.packages.find]
exclude =
  tests
  docs
